# AhinLendor-Website

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-engine.txt  tsconfig.json  vite.config.ts  vitest.config.ts
backend/ahinlendor/: __init__.py  action_encoding.py  api.py  main.py
docker/: splendor-package.patch  splendor-pyproject.toml
scripts/: convert_old_save_to_sgr.py
shared/: action_encoding.json
src/: App.test.tsx  App.tsx  styles.css  types.ts
src/components/: ActionLabel.tsx  TopNav.tsx  UiIcon.tsx
src/components/board/: BoardViewport.tsx  CardView.tsx  GameBoard.tsx  NobleView.tsx  PlayerStrip.tsx  TierRow.tsx  TokenPill.tsx
src/components/pages/: AboutPage.tsx  HomePage.tsx
src/hooks/: useAnimatedEval.ts  useCatalogData.ts  useCatalogIndex.ts  useEnginePolling.ts  useHomeView.ts  useMoveLogModel.ts
src/lib/: actionEncoding.ts  apiClient.ts  appModels.ts  gameUi.ts
src/utils/: exportBoardImage.ts
tests/backend/: test_api_contract.py  test_bridge_ingest.py  test_native_smoke.py
