[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahinlendor-web"
version = "1.0.0"
description = "AhinLendor FastAPI application"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1",
  "numpy>=2,<3",
  "pydantic>=2,<3",
  "torch>=2.5,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
addopts = "-q"
